--- a/application.properties
+++ b/application.properties
@@ -1,10 +1,11 @@
 #Grails Metadata file
-#Fri May 11 15:42:25 EDT 2012
-app.grails.version=2.0.0
+#Sun May 13 17:49:20 EDT 2012
+app.grails.version=2.0.3
 app.name=bp
 app.servlet.version=2.5
 app.version=0.1
 plugins.amazon-s3=0.8.2
+plugins.burning-image=0.5.0
 plugins.quartz=0.4.1
 plugins.svn=1.0.2
 plugins.twitter-bootstrap=2.0.2.25
